--- a/Leyout_3/index.html
+++ b/Leyout_3/index.html
@@ -32,7 +32,26 @@
       </section>
     </header>
     <main class="main container-bg">
-      <section class="container"></section>
+      <section class="container hero flex">
+        <div class="hero__content">
+          <h1>Award-winning custom designs and digital branding solutions</h1>
+          <p>
+            With over 10 years in the industry, we are experienced in creating
+            fully responsive websites, app design, and engaging brand
+            experiences. Find out more about our services.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+      </section>
+      <section class="container flex products">
+        <div class="products__content">
+          <article class="product__content-item product"></article>
+          <div class="product__content-item">
+            <article class="product"></article>
+            <article class="product"></article>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <section class="container"></section>
