--- a/Leyout_3/index.html
+++ b/Leyout_3/index.html
@@ -45,12 +45,50 @@
       </section>
       <section class="container flex products">
         <div class="products__content">
-          <article class="product__content-item product"></article>
+          <article class="product__content-item product">
+            <div>
+              <h2>web design</h2>
+              <a href="#">
+                <h3>view projects</h3>
+              </a>
+            </div>
+          </article>
           <div class="product__content-item">
-            <article class="product"></article>
-            <article class="product"></article>
+            <article class="product">
+              <div>
+                <h2>app design</h2>
+                <a href="#">
+                  <h3>view projects</h3>
+                </a>
+              </div>
+            </article>
+            <article class="product">
+              <div>
+                <h2>graphic design</h2>
+                <a href="#">
+                  <h3>view projects</h3>
+                </a>
+              </div>
+            </article>
           </div>
         </div>
+      </section>
+      <section class="container flex props">
+        <article class="props__item">
+          <img src="./assets/images/props-icon-1.svg" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article class="props__item">
+          <img src="#" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article class="props__item">
+          <img src="#" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
       </section>
     </main>
     <footer class="footer">
