--- a/Leyout_3/index.html
+++ b/Leyout_3/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <section class="container flex">
         <a class="logo" href="#"
           ><img
@@ -42,7 +42,7 @@
           </p>
           <a href="#">Learn More</a>
         </div>
-      </section>
+      </section> -->
       <section class="container flex products">
         <div class="products__content">
           <article class="product__content-item product">
@@ -76,23 +76,37 @@
       <section class="container flex props">
         <article class="props__item">
           <img src="./assets/images/props-icon-1.svg" alt="" />
-          <h2></h2>
-          <p></p>
+          <h2>PASSIONATE</h2>
+          <p>
+            Each project starts with an in-depth brand research to ensure we
+            only create products that serve a purpose. We merge art, design, and
+            technology into exciting new solutions.
+          </p>
         </article>
         <article class="props__item">
-          <img src="#" alt="" />
-          <h2></h2>
-          <p></p>
+          <img src="./assets/images/props-icon-2.svg" alt="" />
+          <h2>RESOURCEFUL</h2>
+          <p>
+            Everything that we do has a strategic purpose. We use an agile
+            approach in all of our projects and value customer collaboration. It
+            guarantees superior results that fulfill our clients’ needs.
+          </p>
         </article>
         <article class="props__item">
-          <img src="#" alt="" />
-          <h2></h2>
-          <p></p>
+          <img src="./assets/images/props-icon-3.svg" alt="" />
+          <h2>FRIENDLY</h2>
+          <p>
+            We are a group of enthusiastic folks who know how to put people
+            first. Our success depends on our customers, and we strive to give
+            them the best experience a company can provide.
+          </p>
         </article>
       </section>
     </main>
     <footer class="footer">
-      <section class="container"></section>
+      <section class="container">
+        <article class="touch"></article>
+      </section>
     </footer>
   </body>
 </html>
